fix: netlify authentication

--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -1,4 +1,5 @@
 {
+    "location": "Localização",
     "button1": {
       "label": "Atividades ao ar livre",
       "title": "Atividades ao ar livre",
