--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -1,18 +1,18 @@
 {
   "location": "Nossa Localização",
   "button1": {
-    "label": "Botão 1",
-    "title": "Título do Botão 1",
-    "content": "Conteúdo do botão 1 aqui"
+    "label": "Atividades ao ar livre",
+    "title": "Atividades ao ar livre",
+    "content": "Conteúdo do Atividades ao ar livre aqui"
   },
   "button2": {
-    "label": "Botão 2",
-    "title": "Título do Botão 2",
-    "content": "Conteúdo do botão 2 aqui"
+    "label": "Restaurantes referenciados",
+    "title": "Restaurantes referenciados",
+    "content": "Conteúdo do Restaurantes referenciados aqui"
   },
   "button3": {
-    "label": "Botão 3",
-    "title": "Título do Botão 3",
-    "content": "Conteúdo do botão 3 aqui"
+    "label": "O que visitar no concelho",
+    "title": "O que visitar no concelho",
+    "content": "Conteúdo do O que visitar no concelho aqui"
   }
 }
