Update Translations “portuguese”

--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -3,7 +3,7 @@
   "button1": {
     "label": "Atividades ao ar livre",
     "title": "Atividades ao ar livre",
-    "content": "Conteúdo do Atividades ao ar livre aqui"
+    "content": "Conteúdo do Atividades ao ar livre aqui\n\n\n\n![](/uploads/download.webp \"E﻿spetáculo\")\n\n# E﻿spetáculo"
   },
   "button2": {
     "label": "Restaurantes referenciados",
